encoding/hariti/y.output

state 0
	$accept: .file $end 
	bundles_zero_or_more: .    (3)

	Use  shift 4
	.  reduce 3 (src line 49)

	file  goto 1
	bundles_zero_or_more  goto 2
	bundle  goto 3

state 1
	$accept:  file.$end 

	$end  accept
	.  error


state 2
	file:  bundles_zero_or_more.    (1)

	.  reduce 1 (src line 34)


state 3
	bundles_zero_or_more:  bundle.bundles_zero_or_more 
	bundles_zero_or_more: .    (3)

	Use  shift 4
	.  reduce 3 (src line 49)

	bundles_zero_or_more  goto 5
	bundle  goto 3

state 4
	bundle:  Use.Ident remote_bundle_options_zero_or_more 
	bundle:  Use.Local Ident local_bundle_options_zero_or_more 

	Local  shift 7
	Ident  shift 6
	.  error


state 5
	bundles_zero_or_more:  bundle bundles_zero_or_more.    (2)

	.  reduce 2 (src line 44)


 6: reduce/reduce conflict  (red'ns 7 and 9) on $end
 6: reduce/reduce conflict  (red'ns 7 and 9) on Use
state 6
	bundle:  Use Ident.remote_bundle_options_zero_or_more 
	remote_bundle_options_zero_or_more: .    (7)
	remote_bundle_options: .    (9)

	As  shift 11
	Depends  shift 13
	EnableIf  shift 12
	Build  shift 14
	.  reduce 7 (src line 75)

	remote_bundle_options_zero_or_more  goto 8
	remote_bundle_options  goto 9
	remote_bundle_option  goto 10

state 7
	bundle:  Use Local.Ident local_bundle_options_zero_or_more 

	Ident  shift 15
	.  error


state 8
	bundle:  Use Ident remote_bundle_options_zero_or_more.    (4)

	.  reduce 4 (src line 53)


state 9
	remote_bundle_options_zero_or_more:  remote_bundle_options.    (6)

	.  reduce 6 (src line 70)


state 10
	remote_bundle_options:  remote_bundle_option.remote_bundle_options 
	remote_bundle_options: .    (9)

	As  shift 11
	Depends  shift 13
	EnableIf  shift 12
	Build  shift 14
	.  reduce 9 (src line 86)

	remote_bundle_options  goto 16
	remote_bundle_option  goto 10

state 11
	remote_bundle_option:  As.aliases 

	Ident  shift 18
	.  error

	aliases  goto 17

state 12
	remote_bundle_option:  EnableIf.String 

	String  shift 19
	.  error


state 13
	remote_bundle_option:  Depends.'(' dependencies_zero_or_more ')' 

	'('  shift 20
	.  error


state 14
	remote_bundle_option:  Build.'{' build_scripts_zero_or_more '}' 

	'{'  shift 21
	.  error


 15: reduce/reduce conflict  (red'ns 30 and 31) on $end
 15: reduce/reduce conflict  (red'ns 30 and 31) on Use
state 15
	bundle:  Use Local Ident.local_bundle_options_zero_or_more 
	local_bundle_options_zero_or_more: .    (30)
	local_bundle_options: .    (31)

	.  reduce 30 (src line 219)

	local_bundle_options_zero_or_more  goto 22
	local_bundle_options  goto 23

state 16
	remote_bundle_options:  remote_bundle_option remote_bundle_options.    (8)

	.  reduce 8 (src line 81)


state 17
	remote_bundle_option:  As aliases.    (10)

	.  reduce 10 (src line 92)


state 18
	aliases:  Ident.',' aliases 
	aliases:  Ident.    (15)

	','  shift 24
	.  reduce 15 (src line 124)


state 19
	remote_bundle_option:  EnableIf String.    (11)

	.  reduce 11 (src line 99)


 20: reduce/reduce conflict  (red'ns 17 and 19) on ')'
state 20
	remote_bundle_option:  Depends '('.dependencies_zero_or_more ')' 
	dependencies_zero_or_more: .    (17)
	dependencies: .    (19)

	Ident  shift 27
	.  reduce 17 (src line 135)

	dependencies_zero_or_more  goto 25
	dependencies  goto 26

 21: reduce/reduce conflict  (red'ns 21 and 23) on '}'
state 21
	remote_bundle_option:  Build '{'.build_scripts_zero_or_more '}' 
	build_scripts_zero_or_more: .    (21)
	build_scripts: .    (23)

	On  shift 30
	.  reduce 21 (src line 157)

	build_scripts_zero_or_more  goto 28
	build_scripts  goto 29

state 22
	bundle:  Use Local Ident local_bundle_options_zero_or_more.    (5)

	.  reduce 5 (src line 61)


state 23
	local_bundle_options_zero_or_more:  local_bundle_options.    (29)

	.  reduce 29 (src line 214)


state 24
	aliases:  Ident ','.aliases 

	Ident  shift 18
	.  error

	aliases  goto 31

state 25
	remote_bundle_option:  Depends '(' dependencies_zero_or_more.')' 

	')'  shift 32
	.  error


state 26
	dependencies_zero_or_more:  dependencies.    (16)

	.  reduce 16 (src line 130)


state 27
	dependencies:  Ident.dependencies 
	dependencies: .    (19)

	Ident  shift 27
	.  reduce 19 (src line 146)

	dependencies  goto 33

state 28
	remote_bundle_option:  Build '{' build_scripts_zero_or_more.'}' 

	'}'  shift 34
	.  error


state 29
	build_scripts_zero_or_more:  build_scripts.    (20)

	.  reduce 20 (src line 152)


state 30
	build_scripts:  On.OSType build_scripts_lines_zero_or_more build_scripts 

	OSType  shift 35
	.  error


state 31
	aliases:  Ident ',' aliases.    (14)

	.  reduce 14 (src line 119)


state 32
	remote_bundle_option:  Depends '(' dependencies_zero_or_more ')'.    (12)

	.  reduce 12 (src line 105)


state 33
	dependencies:  Ident dependencies.    (18)

	.  reduce 18 (src line 141)


state 34
	remote_bundle_option:  Build '{' build_scripts_zero_or_more '}'.    (13)

	.  reduce 13 (src line 111)


 35: reduce/reduce conflict  (red'ns 25 and 27) on On
 35: reduce/reduce conflict  (red'ns 25 and 27) on '}'
state 35
	build_scripts:  On OSType.build_scripts_lines_zero_or_more build_scripts 
	build_scripts_lines_zero_or_more: .    (25)
	build_scripts_lines: .    (27)

	'-'  shift 39
	.  reduce 25 (src line 190)

	build_scripts_lines_zero_or_more  goto 36
	build_scripts_lines  goto 37
	build_scripts_line  goto 38

state 36
	build_scripts:  On OSType build_scripts_lines_zero_or_more.build_scripts 
	build_scripts: .    (23)

	On  shift 30
	.  reduce 23 (src line 177)

	build_scripts  goto 40

state 37
	build_scripts_lines_zero_or_more:  build_scripts_lines.    (24)

	.  reduce 24 (src line 185)


state 38
	build_scripts_lines:  build_scripts_line.build_scripts_lines 
	build_scripts_lines: .    (27)

	'-'  shift 39
	.  reduce 27 (src line 201)

	build_scripts_lines  goto 41
	build_scripts_line  goto 38

state 39
	build_scripts_line:  '-'.Ident '\n' 

	Ident  shift 42
	.  error


state 40
	build_scripts:  On OSType build_scripts_lines_zero_or_more build_scripts.    (22)

	.  reduce 22 (src line 165)


state 41
	build_scripts_lines:  build_scripts_line build_scripts_lines.    (26)

	.  reduce 26 (src line 196)


state 42
	build_scripts_line:  '-' Ident.'\n' 

	'\n'  shift 43
	.  error


state 43
	build_scripts_line:  '-' Ident '\n'.    (28)

	.  reduce 28 (src line 207)

Rule not reduced: local_bundle_options:  

20 terminals, 17 nonterminals
32 grammar rules, 44/16000 states
0 shift/reduce, 8 reduce/reduce conflicts reported
66 working sets used
memory: parser 24/240000
0 extra closures
30 shift entries, 1 exceptions
22 goto entries
3 entries saved by goto default
Optimizer space used: output 43/240000
43 table entries, 0 zero
maximum spread: 20, maximum offset: 38
